fix menu toggle on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,8 @@ main .navbar h1 {
 }
 
 /* Cacher le menu sur le mobile */
-@media (max-width:600px) {
+@media (min-width:600px) {
     .sidemenu {
-        display: none;
+        display: block;
     }
 }
